<resources>
    <string name="app_name">Check Apartament</string>
    <string name="lblLogin">Login</string>
    <string name="txtEmail">Correo Electronico</string>
    <string name="txtPass">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="error_vacio">Campo no puede estar vacio</string>
    <string name="title_activity_segundo">SegundoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Terminaciones-->
    <string name="tLuc">Luces"</string>
    <string name="tDorm">Elementos de dormitorio</string>
    <string name="tCoc">Elementos de cocina</string>
    <string name="tBa">Elementos de baño</string>
    <string name="tMAla">Mala</string>
    <string name="tReg">Regular</string>
    <string name="tNorm">Normal</string>

    <string name="btnGuardar">Guardar</string>

</resources>